--- a/thesis.tex
+++ b/thesis.tex
@@ -89,14 +89,16 @@
 \pagenumbering{arabic}
 % Alwas use \cleardoublepage before \part{...}.
 \cleardoublepage
-\part{Konzeption}\label{pt:Konzeption}
+% \part{Konzeption}\label{pt:Konzeption}
+\include{chapters/chapter00}
 \include{chapters/chapter01}
 \cleardoublepage
-\part{Produktion}\label{pt:Produktion}
+% \part{Produktion}\label{pt:Produktion}
 \include{chapters/chapter02}
 \cleardoublepage
-\part{Postproduktion}\label{pt:Postproduktion}
+% \part{Postproduktion}\label{pt:Postproduktion}
 \include{chapters/chapter03}
+\include{chapters/chapter04}
 %*************************************************************************
 % Backmatter
 %*************************************************************************
