--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -188,6 +188,8 @@
 %\fi
 %\PassOptionsToPackage{pdftex}{graphicx} %%%IVO: driver will be chosen automatically
   \usepackage{graphicx}
+  \usepackage{wrapfig}
+  \usepackage{float}
 
 
 % ********************************************************************
