--- a/thesis.tex
+++ b/thesis.tex
@@ -47,7 +47,7 @@
 %*************************************************************************
 % Bibliographies
 %*************************************************************************
-% \addbibresource{bibliography.bib}
+\addbibresource{bib/thsis.bib}
 
 %*************************************************************************
 % Hyphenation
