--- a/thesis.tex
+++ b/thesis.tex
@@ -47,7 +47,7 @@
 %*************************************************************************
 % Bibliographies
 %*************************************************************************
-\addbibresource{bib/thsis.bib}
+\addbibresource{./bib/quellen.bib}
 
 %*************************************************************************
 % Hyphenation
@@ -80,7 +80,7 @@
 \cleardoublepage\include{frontbackmatter/Contents}
 % \cleardoublepage\include{frontbackmatter/Tables}
 % \cleardoublepage\include{frontbackmatter/Listings}
-\cleardoublepage\include{frontbackmatter/Acronyms}
+% \cleardoublepage\include{frontbackmatter/Acronyms}
 %*************************************************************************
 % Mainmatter
 %*************************************************************************
@@ -112,7 +112,7 @@
 %*************************************************************************
 % Other Stuff in the Back
 %*************************************************************************
-% \cleardoublepage\include{frontbackmatter/Bibliography}
+\cleardoublepage\include{frontbackmatter/Bibliography}
 %*************************************************************************
 % Game Over: Restore, Restart, or Quit?
 %*************************************************************************
