--- a/bib/quellen.bib
+++ b/bib/quellen.bib
@@ -96,3 +96,13 @@ urldate = {2020-02-29},
 publisher = {xoio.de},
 address = {Berlin}
 }
+
+@ONLINE{rigging,
+title = {https://conceptartempire.com/what-is-rigging/},
+author = {Concept Art Empire},
+url = {https://conceptartempire.com/what-is-rigging/},
+urldate = {2020-02-29},
+publisher = {conceptartempire.com},
+address = {Los Angeles, CA}
+}
+
