--- a/bib/quellen.bib
+++ b/bib/quellen.bib
@@ -72,7 +72,7 @@ address = {Norfold, VI}
 
 @ONLINE{Wake,
 title = {Kelvin Wake},
-author = {Aleksandr Berdnikov},
+author = {BERDNIKOV, Aleksandr},
 url = {https://en.wikipedia.org/wiki/Wake#/media/File:Kelvin_Wake_Fr=2.png},
 urldate = {2020-02-29},
 publisher = {wikipedia.org},
@@ -81,7 +81,7 @@ address = {San Francisco, CA}
 
 @ONLINE{Sky,
 title = {Hdr Sky Cloudy 004},
-author = {Andrew Price},
+author = {PRICE, Andrew},
 url = {https://www.poliigon.com/texture/hdr-sky-cloudy-004},
 urldate = {2020-02-29},
 publisher = {poliigon.com},
@@ -98,11 +98,29 @@ address = {Berlin}
 }
 
 @ONLINE{rigging,
-title = {https://conceptartempire.com/what-is-rigging/},
+title = {What is rigging?},
 author = {Concept Art Empire},
 url = {https://conceptartempire.com/what-is-rigging/},
 urldate = {2020-02-29},
 publisher = {conceptartempire.com},
 address = {Los Angeles, CA}
+}
+
+@ONLINE{cycles,
+title = {Introduction to Cycles Internals},
+author = {STOCKNER, Lukas},
+url = {https://www.youtube.com/watch?v=3Lxc1-OvisQ},
+urldate = {2020-02-29},
+publisher = {Blender Foundation},
+address = {Amsterdam}
+}
+
+@ONLINE{weight_paint,
+title = {Introduction to Weight Painting},
+author = {VAN LOMMEL, Brech},
+url = {https://docs.blender.org/manual/en/latest/sculpt_paint/weight_paint/introduction.html},
+urldate = {2020-02-29},
+publisher = {Blender Foundation},
+address = {Amsterdam}
 }
 
