--- a/bib/quellen.bib
+++ b/bib/quellen.bib
@@ -124,3 +124,13 @@ publisher = {Blender Foundation},
 address = {Amsterdam}
 }
 
+@ONLINE{filmic,
+title = {Color Management},
+author = {SOBOTKA, Troy},
+url = {https://docs.blender.org/manual/en/latest/render/color_management.html},
+urldate = {2020-02-29},
+publisher = {Blender Foundation},
+address = {Amsterdam}
+}
+
+
