--- a/bib/quellen.bib
+++ b/bib/quellen.bib
@@ -117,7 +117,7 @@ address = {Amsterdam}
 
 @ONLINE{weight_paint,
 title = {Introduction to Weight Painting},
-author = {VAN LOMMEL, Brech},
+author = {VAN LOMMEL, Brecht},
 url = {https://docs.blender.org/manual/en/latest/sculpt_paint/weight_paint/introduction.html},
 urldate = {2020-02-29},
 publisher = {Blender Foundation},
@@ -133,4 +133,12 @@ publisher = {Blender Foundation},
 address = {Amsterdam}
 }
 
-
+@book{matchmoving,
+author = {Dobbert, Tim},
+title = {Matchmoving: The Invisible Art of Camera Tracking},
+year = {2012},
+isbn = {111835205X},
+publisher = {SYBEX Inc.},
+address = {USA},
+edition = {2nd}
+}
