--- a/frontbackmatter/Titlepage.tex
+++ b/frontbackmatter/Titlepage.tex
@@ -18,7 +18,7 @@
 
   \begin{center}
     \vspace{0.1cm}
-    \huge \textbf{\myUni}\\
+    % \huge \textbf{\myUni}\\
     \vspace{0.4cm}
     \LARGE --~\myFaculty~--
   \end{center}
@@ -27,7 +27,9 @@
   \vfill
 
   \begin{center}
-    \LARGE \textbf{\myTitle}
+    \huge \textbf{\myTitle}\\
+    \vspace{0.1cm}
+    \LARGE \mySubtitle
   \end{center} 
 
   \vfill
