--- a/hdathesis-config.tex
+++ b/hdathesis-config.tex
@@ -7,12 +7,12 @@
 % ****************************************************************************************************
 % 1. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{SearchWing -- Ein Infofilm zu einer autonomen Drohne \xspace}
-%\newcommand{\mySubtitle}{An Homage to The Elements of Typographic Style\xspace}
-\newcommand{\myDegree}{Master of Science (M.Sc.)\xspace} 
+\newcommand{\myTitle}{SearchWing \xspace}
+\newcommand{\mySubtitle}{Ein Infofilm zu einer autonomen Drohne\xspace}
+% \newcommand{\myDegree}{Master of Science (M.Sc.)\xspace} 
 %\newcommand{\myDegree}{Bachelor of Arts (B.A.)\xspace}
 %\newcommand{\myDegree}{Master of Science (M.Sc.)\xspace}
-%\newcommand{\myDegree}{Master of Arts (M.A.)\xspace}
+\newcommand{\myDegree}{Master of Arts (M.A.)\xspace}
 \newcommand{\myName}{Peter Baintner\xspace}
 \newcommand{\myId}{2053464\xspace}
 \newcommand{\myProf}{Prof. Robert Rose\xspace}
@@ -20,13 +20,13 @@
 \newcommand{\myFaculty}{Fachbereich Gestaltung\xspace}
 \newcommand{\myUni}{Hochschule Augsburg\xspace}
 \newcommand{\myLocation}{Augsburg\xspace}
-\newcommand{\myTime}{31. April 2020\xspace}
+\newcommand{\myTime}{\today\xspace}
 \newcommand{\myVersion}{version 4.4\xspace}
 
 % ****************************************************************************************************
 % 2. Is it a master thesis?
 % ****************************************************************************************************
-%\PassOptionsToPackage{master}{hdahesis} % uncomment if this is a master thesis 
+\PassOptionsToPackage{master}{hdahesis} % uncomment if this is a master thesis 
 
 % ****************************************************************************************************
 % 3. Does the thesis have a lock flag?
