--- a/bib/__latexindent_temp.tex
+++ b/bib/__latexindent_temp.tex
@@ -1,1 +1,9 @@
-https://docs.blender.org/manual/en/latest/render/color_management.html
+@book{10.5555/2829123,
+author = {Dobbert, Tim},
+title = {Matchmoving: The Invisible Art of Camera Tracking},
+year = {2012},
+isbn = {111835205X},
+publisher = {SYBEX Inc.},
+address = {USA},
+edition = {2nd}
+}
