--- a/frontbackmatter/Contents.tex
+++ b/frontbackmatter/Contents.tex
@@ -3,7 +3,7 @@
 %*******************************************************
 \pagestyle{scrheadings}
 \refstepcounter{dummy}
-\pdfbookmark[0]{\contentsname}{tableofcontents}
+\pdfbookmark[0]{\contentsname}{contents}
 \setcounter{tocdepth}{2} % <-- 2 includes up to subsections in the ToC
 \setcounter{secnumdepth}{3} % <-- 3 numbers up to subsubsections
 \manualmark
