--- a/frontbackmatter/Declaration.tex
+++ b/frontbackmatter/Declaration.tex
@@ -20,7 +20,7 @@ Die Zeichnungen oder Abbildungen in dieser Arbeit sind von mir selbst erstellt w
 Diese Arbeit ist in gleicher oder ähnlicher Form noch bei keiner anderen Prüfungsbehörde eingereicht worden. 
 \bigskip
 
-\noindent\textit{\myLocation, \myTime}
+\noindent \myLocation, \myTime
 
 \smallskip
 
