--- a/frontbackmatter/Figures.tex
+++ b/frontbackmatter/Figures.tex
@@ -7,5 +7,9 @@
 \refstepcounter{dummy}
 \pdfbookmark[0]{\listfigurename}{lof}
 \listoffigures
+% \spacedlowsmallcaps{#1}
+% \addtocontents{toc}{\protect\vspace{\beforebibskip}}%
+% \parindent 
+\addcontentsline{toc}{chapter}{\textbf{\listfigurename}}%
 
 \cleardoublepage
