--- a/frontbackmatter/Contents.tex
+++ b/frontbackmatter/Contents.tex
@@ -8,6 +8,7 @@
 \setcounter{secnumdepth}{3} % <-- 3 numbers up to subsubsections
 \manualmark
 \markboth{\spacedlowsmallcaps{\contentsname}}{\spacedlowsmallcaps{\contentsname}}
+\vspace{5cm}
 \tableofcontents
 
 \cleardoublepage
