--- a/frontbackmatter/Figures.tex
+++ b/frontbackmatter/Figures.tex
@@ -10,6 +10,6 @@
 % \spacedlowsmallcaps{#1}
 % \addtocontents{toc}{\protect\vspace{\beforebibskip}}%
 % \parindent 
-\addcontentsline{toc}{chapter}{\textbf{\listfigurename}}%
+\addcontentsline{toc}{section}{\listfigurename}%
 
 \cleardoublepage
