--- a/bib/quellen.bib
+++ b/bib/quellen.bib
@@ -139,6 +139,46 @@ title = {Matchmoving: The Invisible Art of Camera Tracking},
 year = {2012},
 isbn = {111835205X},
 publisher = {SYBEX Inc.},
-address = {USA},
+address = {Alameda, CA},
 edition = {2nd}
 }
+
+@ONLINE{openexr,
+title = {OpenEXR},
+author = {LF Projects, LLC},
+url = {https://www.openexr.com/},
+urldate = {2020-02-29},
+publisher = {LF Projects, LLC},
+address = {Los Angeles, CA}
+}
+
+@ONLINE{linearworkflow,
+title = {Linear workflows and color management},
+author = {Autodesk Help},
+url = {https://knowledge.autodesk.com/support/maya/learn-explore/caas/CloudHelp/cloudhelp/2018/ENU/Maya-Rendering/files/GUID-A1329E53-4132-4229-AF14-607BE0371F95-htm.html},
+urldate = {2020-02-29},
+publisher = {Autodesk Knowledge Network},
+address = {San Rafael, CA}
+}
+
+@ONLINE{colorcorrect,
+title = {Color Correction with DaVinci Resolve 15},
+author = {FISSOUN, Daria},
+url = {https://documents.blackmagicdesign.com/UserManuals/DaVinci-Resolve-15-Color-Correction.pdf?_v=1555571700000},
+urldate = {2020-02-29},
+publisher = {Blackmagic Design},
+address = {Fremont, CA}
+}
+
+@ONLINE{wind,
+title = {WIND SOUNDS: "Howling Wind" for Focus, Sleeping, Studying Hours Of Nature Sounds - 2019},
+author = {mindfulness \& body fulfillment},
+url = {https://www.youtube.com/watch?v=xeTv-pDfxaY},
+urldate = {2020-02-29},
+publisher = {YouTube, LLC},
+address = {San Bruno, CA}
+}
+
+
+
+
