--- a/frontbackmatter/Figures.tex
+++ b/frontbackmatter/Figures.tex
@@ -11,5 +11,6 @@
 % \addtocontents{toc}{\protect\vspace{\beforebibskip}}%
 % \parindent 
 \addcontentsline{toc}{section}{\listfigurename}%
+% \tocentry{asdf}
 
 \cleardoublepage
