--- a/bib/__latexindent_temp.tex
+++ b/bib/__latexindent_temp.tex
@@ -1,1 +1,8 @@
-https://www.youtube.com/watch?v=xeTv-pDfxaY
+@book{vanGumster:2015:BD:2821218,
+ author = {van Gumster, Jason},
+ title = {Blender For Dummies},
+ year = {2015},
+ isbn = {1119039533, 9781119039532},
+ edition = {3rd},
+ publisher = {For Dummies},
+} 
