--- a/bib/quellen.bib
+++ b/bib/quellen.bib
@@ -179,6 +179,14 @@ publisher = {YouTube, LLC},
 address = {San Bruno, CA}
 }
 
+@book{vanGumster:2015:BD:2821218,
+ author = {van Gumster, Jason},
+ title = {Blender For Dummies},
+ year = {2015},
+ isbn = {1119039533, 9781119039532},
+ edition = {3rd},
+ publisher = {For Dummies},
+} 
 
 
 
