--- a/frontbackmatter/Bibliography.tex
+++ b/frontbackmatter/Bibliography.tex
@@ -12,4 +12,5 @@
   \addcontentsline{toc}{chapter}{\tocEntry{#1}}%
   \chapter*{#1}%
 }
-\printbibliography[heading=bibintoc]
+% \printbibliography[heading=bibintoc]
+\printbibliography[heading=none]
