--- a/frontbackmatter/Figures.tex
+++ b/frontbackmatter/Figures.tex
@@ -5,12 +5,12 @@
 \renewcommand{\chaptermark}[1]{\markboth{\spacedlowsmallcaps{#1}}{\spacedlowsmallcaps{#1}}}
 \renewcommand{\sectionmark}[1]{\markright{\thesection\enspace\spacedlowsmallcaps{#1}}}
 \refstepcounter{dummy}
-\pdfbookmark[0]{\listfigurename}{lof}
+\pdfbookmark[section]{\listfigurename}{toc}
 \listoffigures
 % \spacedlowsmallcaps{#1}
 % \addtocontents{toc}{\protect\vspace{\beforebibskip}}%
 % \parindent 
-\addcontentsline{toc}{section}{\listfigurename}%
+% \addcontentsline{toc}{Chapter}{Anhang}%
 % \tocentry{asdf}
 
 \cleardoublepage
