--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -146,6 +146,7 @@
 %\captionsetup{font=small,labelformat=smallcaps} % format=hang,
 \captionsetup{font=small} % format=hang,
 \usepackage{subfig}
+\usepackage{geometry}
 % ****************************************************************************************************
 
 
