--- a/frontbackmatter/Bibliography.tex
+++ b/frontbackmatter/Bibliography.tex
@@ -8,9 +8,9 @@
   \phantomsection
   \manualmark
   \markboth{\spacedlowsmallcaps{#1}}{\spacedlowsmallcaps{#1}}%
-  \addtocontents{toc}{\protect\vspace{\beforebibskip}}%
-  \addcontentsline{toc}{chapter}{\tocEntry{#1}}%
+  % \addtocontents{toc}{\protect\vspace{\beforebibskip}}%
+  % \addcontentsline{toc}{chapter}{\tocEntry{#1}}%
   \chapter*{#1}%
 }
 % \printbibliography[heading=bibintoc]
-\printbibliography[heading=none]
+\printbibliography[heading=bibintoc]
