--- a/bib/__latexindent_temp.tex
+++ b/bib/__latexindent_temp.tex
@@ -1,8 +1,11 @@
-@book{vanGumster:2015:BD:2821218,
- author = {van Gumster, Jason},
- title = {Blender For Dummies},
- year = {2015},
- isbn = {1119039533, 9781119039532},
- edition = {3rd},
- publisher = {For Dummies},
-} 
+@book{10.5555/1051742,
+author = {Salomon, David},
+title = {Curves and Surfaces for Computer Graphics},
+year = {2005},
+isbn = {0387241965},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg}
+}
+
+  
+
