--- a/bib/quellen.bib
+++ b/bib/quellen.bib
@@ -188,5 +188,13 @@ address = {San Bruno, CA}
  publisher = {For Dummies},
 } 
 
+@book{spline,
+author = {Salomon, David},
+title = {Curves and Surfaces for Computer Graphics},
+year = {2005},
+isbn = {0387241965},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg}
+}
 
 
