--- a/frontbackmatter/Figures.tex
+++ b/frontbackmatter/Figures.tex
@@ -15,7 +15,7 @@
   \egroup
 }
 
-\addcontentsline{toc}{chapter}{\numberline \textsomels{\textsc{abbildungsverzeichnis}}}%
+\addcontentsline{toc}{chapter}{\hspace*{4.2mm} \textsomels{\textsc{abbildungsverzeichnis}}}%
 % \notocnumsection{\textsomels{\textsc{abbildungsverzeichnis}}
 \renewcommand\bibname{quellverzeichnis}
 \listoffigures
