--- a/frontbackmatter/Declaration.tex
+++ b/frontbackmatter/Declaration.tex
@@ -13,7 +13,7 @@ Alle Stellen, die wörtlich oder sinngemäß aus veröffentlichten oder noch nic
 \medskip
 
 \noindent
-Die Zeichnungen oder Abbildungen in dieser Arbeit sind von mir selbst erstellt worden oder mit einem entsprechenden Quellennachweis versehen.
+Die Zeichnungen oder Abbildungen in dieser Arbeit sind von mir selbst erstellt worden oder sind mit einem entsprechenden Quellennachweis versehen.
 \medskip
 
 \noindent
