--- a/frontbackmatter/Figures.tex
+++ b/frontbackmatter/Figures.tex
@@ -5,18 +5,11 @@
 \renewcommand{\chaptermark}[1]{\markboth{\spacedlowsmallcaps{#1}}{\spacedlowsmallcaps{#1}}}
 \renewcommand{\sectionmark}[1]{\markright{\thesection\enspace\spacedlowsmallcaps{#1}}}
 \refstepcounter{dummy}
-\pdfbookmark[0]{\listfigurename}{toc}
+\pdfbookmark[0]{\listfigurename}{lof}
 \newcommand*{\textsomels}[1]{\textls[80]{#1}}
 
-\newcommand{\notocnumsection}[1]{
-  \bgroup%
-  \renewcommand*{\addcontentsline}[3]{\addtocontents{##1}{\protect\contentsline{##2}{##3}{}}}%
-  \section{#1}%
-  \egroup
-}
-
 \addcontentsline{toc}{chapter}{\hspace*{4.2mm} \textsomels{\textsc{abbildungsverzeichnis}}}%
-% \notocnumsection{\textsomels{\textsc{abbildungsverzeichnis}}
+
 \renewcommand\bibname{quellverzeichnis}
 \listoffigures
 \cleardoublepage
