--- a/frontbackmatter/Titlepage.tex
+++ b/frontbackmatter/Titlepage.tex
@@ -20,7 +20,7 @@
     \vspace{0.1cm}
     % \huge \textbf{\myUni}\\
     \vspace{0.4cm}
-    \LARGE --~\myFaculty~--
+    \Large \myFaculty
   \end{center}
 
   \vfill
@@ -29,7 +29,7 @@
   \begin{center}
     \huge \textbf{\myTitle}\\
     \vspace{0.1cm}
-    \LARGE \mySubtitle
+    \Large \mySubtitle
   \end{center} 
 
   \vfill
@@ -46,15 +46,16 @@
   \begin{center}
     \Large vorgelegt von\\
     \vspace{0.3cm}
-    \Large \textbf{\myName}\\
+    \Large {\myName}\\
     \vspace{0.3cm}
-    \normalsize Matrikelnummer: \myId
+    \Large Matrikelnummer \myId
   \end{center}
 
   \vfill
   \vfill
 
   \begin{center}
+  \Large
     \begin{tabular}{lll}
       Referent    & : & \myProf \\
       Korreferent & : & \myOtherProf
