--- a/frontbackmatter/Contents.tex
+++ b/frontbackmatter/Contents.tex
@@ -3,14 +3,11 @@
 %*******************************************************
 \pagestyle{scrheadings}
 \refstepcounter{dummy}
-\pdfbookmark[0]{\contentsname}{contents}
+\pdfbookmark[0]{\contentsname}{tableofcontents}
 \setcounter{tocdepth}{2} % <-- 2 includes up to subsections in the ToC
 \setcounter{secnumdepth}{3} % <-- 3 numbers up to subsubsections
 \manualmark
 \markboth{\spacedlowsmallcaps{\contentsname}}{\spacedlowsmallcaps{\contentsname}}
-% \setlength{\topmargin}{5cm}
-% \titlespacing*{\chapter}{0pt}{3pt}{0pt}
-
 \addtocontents{toc}{\vspace{1\baselineskip}} %spacing above first line of toc
 \tableofcontents
 
