--- a/hdathesis-config.tex
+++ b/hdathesis-config.tex
@@ -7,7 +7,7 @@
 % ****************************************************************************************************
 % 1. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{SearchWing \xspace}
+\newcommand{\myTitle}{SearchWing\xspace}
 \newcommand{\mySubtitle}{Ein Infofilm zu einer autonomen Drohne\xspace}
 % \newcommand{\myDegree}{Master of Science (M.Sc.)\xspace} 
 %\newcommand{\myDegree}{Bachelor of Arts (B.A.)\xspace}
@@ -17,7 +17,7 @@
 \newcommand{\myId}{2053464\xspace}
 \newcommand{\myProf}{Prof. Robert Rose\xspace}
 \newcommand{\myOtherProf}{Prof. Michael Kipp\xspace}
-\newcommand{\myFaculty}{Fachbereich Gestaltung\xspace}
+\newcommand{\myFaculty}{Fakultät Gestaltung\\ Animation Interaction Research\xspace}
 \newcommand{\myUni}{Hochschule Augsburg\xspace}
 \newcommand{\myLocation}{Augsburg\xspace}
 \newcommand{\myTime}{\today\xspace}
