julia & papa feedback

--- a/bib/quellen.bib
+++ b/bib/quellen.bib
@@ -2,7 +2,7 @@
 title = {Blender Manual},
 author = {VAN LOMMEL, Brecht},
 url = {https://docs.blender.org/manual/en/2.79/render/blender_render/world/mist.html},
-urldate = {2020-02-29},
+urldate = {2020-04-02},
 publisher = {Blender Foundation},
 address = {Amsterdam}
 }
@@ -11,7 +11,7 @@ address = {Amsterdam}
 title = {Sunflowers HDRI Textur},
 author = {MAJDBORODA, Sergej},
 url = {https://hdrihaven.com/hdri/?c=skies&h=sunflowers},
-urldate = {2020-02-29},
+urldate = {2020-02-10},
 publisher = {hdrihaven.com},
 address = {Johannesburg}
 }
@@ -20,7 +20,7 @@ address = {Johannesburg}
 title = {Rocker Switch - Arcolectric H8550VB},
 author = {SCHWECKE, Stephanie},
 url = {https://grabcad.com/library/rocker-switch-arcolectric-h8550vb},
-urldate = {2020-02-29},
+urldate = {2020-01-05},
 publisher = {GrabCAD},
 address = {Cambridge, MA}
 }
@@ -29,7 +29,7 @@ address = {Cambridge, MA}
 title = {brushless motor 2212 920kv},
 author = {KrisNT},
 url = {https://grabcad.com/library/brushless-motor-2212-920kv-1},
-urldate = {2020-02-29},
+urldate = {2020-01-05},
 publisher = {GrabCAD},
 address = {Cambridge, MA}
 }
@@ -38,7 +38,7 @@ address = {Cambridge, MA}
 title = {Hobby Servo Motors for RC cars, planes, etc...},
 author = {SHUJA, Hasanain},
 url = {https://grabcad.com/library/hobby-servo-motors-for-rc-cars-planes-etc-1},
-urldate = {2020-02-29},
+urldate = {2020-01-05},
 publisher = {GrabCAD},
 address = {Cambridge, MA}
 }
@@ -47,7 +47,7 @@ address = {Cambridge, MA}
 title = {propeller},
 author = {SERTOĞLU, Cagatay},
 url = {https://grabcad.com/library/propeller-403},
-urldate = {2020-02-29},
+urldate = {2020-01-05},
 publisher = {GrabCAD},
 address = {Cambridge, MA}
 }
@@ -56,7 +56,7 @@ address = {Cambridge, MA}
 title = {Sailboat III},
 author = {CITATI, Filippo},
 url = {https://grabcad.com/library/sailboat-iii-1},
-urldate = {2020-02-29},
+urldate = {2020-01-05},
 publisher = {GrabCAD},
 address = {Cambridge, MA}
 }
@@ -65,7 +65,7 @@ address = {Cambridge, MA}
 title = {2010 elan impression},
 author = {boats.com},
 url = {https://de.boats.com/segelboote/2010-elan-impression-434-5942438/},
-urldate = {2020-02-29},
+urldate = {2020-03-14},
 publisher = {boats.com},
 address = {Norfold, VI}
 }
@@ -74,7 +74,7 @@ address = {Norfold, VI}
 title = {Kelvin Wake},
 author = {BERDNIKOV, Aleksandr},
 url = {https://en.wikipedia.org/wiki/Wake#/media/File:Kelvin_Wake_Fr=2.png},
-urldate = {2020-02-29},
+urldate = {2020-02-24},
 publisher = {wikipedia.org},
 address = {San Francisco, CA}
 }
@@ -83,7 +83,7 @@ address = {San Francisco, CA}
 title = {Hdr Sky Cloudy 004},
 author = {PRICE, Andrew},
 url = {https://www.poliigon.com/texture/hdr-sky-cloudy-004},
-urldate = {2020-02-29},
+urldate = {2020-04-08},
 publisher = {poliigon.com},
 address = {Brisbane}
 }
@@ -92,7 +92,7 @@ address = {Brisbane}
 title = {3d scanned people},
 author = {Xoio},
 url = {https://xoio-air.de/2017/3d-scanned-people-improved-version/},
-urldate = {2020-02-29},
+urldate = {2020-04-02},
 publisher = {xoio.de},
 address = {Berlin}
 }
@@ -101,7 +101,7 @@ address = {Berlin}
 title = {What is rigging?},
 author = {Concept Art Empire},
 url = {https://conceptartempire.com/what-is-rigging/},
-urldate = {2020-02-29},
+urldate = {2020-04-01},
 publisher = {conceptartempire.com},
 address = {Los Angeles, CA}
 }
@@ -110,7 +110,7 @@ address = {Los Angeles, CA}
 title = {Introduction to Cycles Internals},
 author = {STOCKNER, Lukas},
 url = {https://www.youtube.com/watch?v=3Lxc1-OvisQ},
-urldate = {2020-02-29},
+urldate = {2020-02-23},
 publisher = {Blender Foundation},
 address = {Amsterdam}
 }
@@ -119,7 +119,7 @@ address = {Amsterdam}
 title = {Introduction to Weight Painting},
 author = {VAN LOMMEL, Brecht},
 url = {https://docs.blender.org/manual/en/latest/sculpt_paint/weight_paint/introduction.html},
-urldate = {2020-02-29},
+urldate = {2020-02-26},
 publisher = {Blender Foundation},
 address = {Amsterdam}
 }
@@ -128,13 +128,13 @@ address = {Amsterdam}
 title = {Color Management},
 author = {SOBOTKA, Troy},
 url = {https://docs.blender.org/manual/en/latest/render/color_management.html},
-urldate = {2020-02-29},
+urldate = {2020-02-01},
 publisher = {Blender Foundation},
 address = {Amsterdam}
 }
 
 @book{matchmoving,
-author = {Dobbert, Tim},
+author = {DOBBERT, Tim},
 title = {Matchmoving: The Invisible Art of Camera Tracking},
 year = {2012},
 isbn = {111835205X},
@@ -147,16 +147,16 @@ edition = {2nd}
 title = {OpenEXR},
 author = {LF Projects, LLC},
 url = {https://www.openexr.com/},
-urldate = {2020-02-29},
+urldate = {2020-02-02},
 publisher = {LF Projects, LLC},
 address = {Los Angeles, CA}
 }
 
 @ONLINE{linearworkflow,
 title = {Linear workflows and color management},
-author = {Autodesk Help},
+author = {{Autodesk Knowledge Network}},
 url = {https://knowledge.autodesk.com/support/maya/learn-explore/caas/CloudHelp/cloudhelp/2018/ENU/Maya-Rendering/files/GUID-A1329E53-4132-4229-AF14-607BE0371F95-htm.html},
-urldate = {2020-02-29},
+urldate = {2020-02-20},
 publisher = {Autodesk Knowledge Network},
 address = {San Rafael, CA}
 }
@@ -165,22 +165,22 @@ address = {San Rafael, CA}
 title = {Color Correction with DaVinci Resolve 15},
 author = {FISSOUN, Daria},
 url = {https://documents.blackmagicdesign.com/UserManuals/DaVinci-Resolve-15-Color-Correction.pdf?_v=1555571700000},
-urldate = {2020-02-29},
+urldate = {2020-03-25},
 publisher = {Blackmagic Design},
 address = {Fremont, CA}
 }
 
 @ONLINE{wind,
-title = {WIND SOUNDS: "Howling Wind" for Focus, Sleeping, Studying Hours Of Nature Sounds - 2019},
-author = {mindfulness \& body fulfillment},
+title = {Wind Sounds: "Howling Wind" for Focus, Sleeping, Studying Hours Of Nature Sounds - 2019},
+author = {{mindfulness \& body fulfillment}},
 url = {https://www.youtube.com/watch?v=xeTv-pDfxaY},
-urldate = {2020-02-29},
+urldate = {2020-03-15},
 publisher = {YouTube, LLC},
 address = {San Bruno, CA}
 }
 
 @book{vanGumster:2015:BD:2821218,
- author = {van Gumster, Jason},
+ author = {VAN GUMSTER, Jason},
  title = {Blender For Dummies},
  year = {2015},
  isbn = {1119039533, 9781119039532},
@@ -189,12 +189,21 @@ address = {San Bruno, CA}
 } 
 
 @book{spline,
-author = {Salomon, David},
+author = {SALOMON, David},
 title = {Curves and Surfaces for Computer Graphics},
 year = {2005},
 isbn = {0387241965},
 publisher = {Springer-Verlag},
 address = {Berlin, Heidelberg}
+}
+
+@ONLINE{thbd,
+title = {Ocean},
+author = {{Thbd}},
+url = {https://soundcloud.com/thbdsultan/ocean},
+urldate = {2020-04-14},
+publisher = {SoundCloud Ltd.},
+address = {London}
 }
 
 
