--- a/classicthesis.sty
+++ b/classicthesis.sty
@@ -205,7 +205,7 @@
 
        \ifthenelse{\boolean{ct@eulerchapternumbers}}% font for the chapter numbers
           {\DeclareFixedFont{\chapterNumber}{U}{eur}{b}{n}{70}}%
-          {\DeclareFixedFont{\chapterNumber}{T1}{pplj}{m}{n}{70}}%
+          {\DeclareFixedFont{\chapterNumber}{T1}{put}{m}{n}{70}}% <-- declare here
          %{\newfont{\chapterNumber}{eurb10 scaled 7000}}%
          %{\newfont{\chapterNumber}{pplr9d scaled 7000}}
          % Euler eurb10 / Palatino OSF pplr9d / Palatino SC pplrc9d
