--- a/frontbackmatter/Bibliography.tex
+++ b/frontbackmatter/Bibliography.tex
@@ -13,4 +13,8 @@
   \chapter*{#1}%
 }
 % \printbibliography[heading=bibintoc]
+\setlength\bibitemsep{1.5\itemsep}
+\begingroup
+\setstretch{1.0}
 \printbibliography[heading=bibintoc]
+\endgroup
