--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -29,7 +29,7 @@
   tocaligned=false, % the left column of the toc will be aligned (no indentation)
   dottedtoc=true,   % page numbers in ToC flushed right
   parts=true,       % use part division
-  eulerchapternumbers=true, % use AMS Euler for chapter font (otherwise Palatino)
+  eulerchapternumbers=false, % use AMS Euler for chapter font (otherwise Palatino)
   linedheaders=false,       % chaper headers will have line above and beneath
   floatperchapter=true,     % numbering per chapter for all floats (i.e., Figure 1.1)
   listings=true,    % load listings package and setup LoL
@@ -90,8 +90,8 @@
   style=numeric-comp,%
   %style=alphabetic,%
   %style=authoryear-comp, % Author 1999, 2010
-  %bibstyle=authoryear,dashed=false, % dashed: substitute rep. author with ---
-  sorting=nyt, % name, year, title
+  bibstyle=authoryear,dashed=false, % dashed: substitute rep. author with ---
+  sorting=none, % name, year, title
   maxbibnames=10, % default: 3, et al.
   %backref=true,%
   natbib=true % natbib compatibility mode (\citep and \citet still work)
@@ -285,15 +285,17 @@
 % ********************************************************************
 % Using different fonts
 % ********************************************************************
-%\usepackage[oldstylenums]{kpfonts} % oldstyle notextcomp
-%\usepackage[osf]{libertine}
-%\usepackage[light,condensed,math]{iwona}
-%\renewcommand{\sfdefault}{iwona}
-% \usepackage{lmodern} % <-- no osf support :-(
-\usepackage{cfr-lm} %
-%\usepackage[urw-garamond]{mathdesign} <-- no osf support :-(
-%\usepackage[default,osfigures]{opensans} % scale=0.95
-%\usepackage[sfdefault]{FiraSans}
+% \usepackage[oldstylenums]{kpfonts} % oldstyle notextcomp
+% \usepackage[osf]{libertine}
+% \usepackage[light,condensed,math]{iwona}
+% \renewcommand{\sfdefault}{iwona}
+\usepackage{lmodern} % <-- no osf support :-(
+% \usepackage{cfr-lm} %
+% \usepackage[urw-garamond]{mathdesign}% <-- no osf support :-(
+% \usepackage[default,osfigures]{opensans} % scale=0.95
+% \usepackage[sfdefault]{FiraSans}
+% \usepackage{fourier}
+% \usepackage[utopia]{mathdesign}
 % ********************************************************************
 % \usepackage[largesc,osf]{newpxtext}
 % Used to fix these:
