änderungen deckblatt übernommen

--- a/frontbackmatter/Titlepage.tex
+++ b/frontbackmatter/Titlepage.tex
@@ -57,8 +57,8 @@
   \begin{center}
   \Large
     \begin{tabular}{lll}
-      Referent    & : & \myProf \\
-      Korreferent & : & \myOtherProf
+      Betreuer    &   & \myProf \\
+                  &   & \myOtherProf
     \end{tabular}
   \end{center} 
 
