--- a/hdathesis-config.tex
+++ b/hdathesis-config.tex
@@ -17,7 +17,7 @@
 \newcommand{\myId}{2053464\xspace}
 \newcommand{\myProf}{Prof. Robert Rose\xspace}
 \newcommand{\myOtherProf}{Prof. Michael Kipp\xspace}
-\newcommand{\myFaculty}{Fakultät Gestaltung\\ Animation Interaction Research\xspace}
+\newcommand{\myFaculty}{Studiengang Interaktive Mediensysteme\xspace}
 \newcommand{\myUni}{Hochschule Augsburg\xspace}
 \newcommand{\myLocation}{Augsburg\xspace}
 \newcommand{\myTime}{\today\xspace}
