--- a/bib/quellen.bib
+++ b/bib/quellen.bib
@@ -206,4 +206,15 @@ publisher = {SoundCloud Ltd.},
 address = {London}
 }
 
+@ONLINE{SearchWing,
+title = {Searchwing Augsburg},
+author = {{SearchWing Team}},
+url = {https://www.hs-augsburg.de/en/Electrical-Engineering/SearchWing.html},
+urldate = {2020-04-16},
+publisher = {Hochschule Augsburg},
+address = {Augsburg}
+}
+
+
+
 
