--- a/frontbackmatter/Titlepage.tex
+++ b/frontbackmatter/Titlepage.tex
@@ -57,7 +57,7 @@
   \begin{center}
   \Large
     \begin{tabular}{lll}
-      Betreuer    &   & \myProf \\
+      Gutachter   &   & \myProf \\
                   &   & \myOtherProf
     \end{tabular}
   \end{center} 
